# DPOpt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  alice_data.csv  bob_data.csv  cmake_install.cmake  cost_scale.csv  data_copy.sh  drt_alice.csv  drt_bob.csv  generate_random_data.py  get_runtimes.sh  notes.txt  prev.txt  q1_10.txt  q1_20.txt  q2_10.txt  q2_20.txt  q3_10.txt  q3_100.txt  q3_20.txt  q4_10.txt  q4_100.txt  q4_20.txt  q5_10.txt  q5_20.txt  q_temps.txt  rel0_alice.csv  rel0_bob.csv  rel1_alice.csv  rel1_bob.csv  rel2_alice.csv  rel2_bob.csv  rel3_alice.csv  rel3_bob.csv  rel4_alice.csv  rel4_bob.csv  (+3 more)
core/: _op_binary.hpp  costModel.hpp  dpoptimizer.hpp  global_string_encoder.hpp  op_equijoin.hpp  op_equijoin_syscat.hpp  op_filter.hpp  op_filter_syscat.hpp  op_scanner.hpp  plan_node.hpp  planner.hpp  relation.hpp  stats.hpp  tpch_preproc.hpp
core/parser/: debug.txt  get_logical_tree.py  notes.txt  parser.hpp  q1_logictree.json  q1_node_details.json  q2_logictree.json  q2_node_details.json
exp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cost-qs  exp_q1.cpp  exp_q12.cpp  exp_q2.cpp  exp_q21.cpp  exp_q3.cpp  exp_q4.cpp  exp_q5.cpp  filter.cpp  full_pipeline.cpp  parser.cpp  planner.cpp  preprocess.cpp  prev.txt  qplan.cpp  runtime_qs  string_data_read.cpp  tpch5.cpp  tpchQuery1.cpp  tpchQuery2.cpp  tpchQuery3.cpp  tpchQuery4.cpp  tpch_preproc.hpp
test/parsed/: q1_logictree.json  q1_nodes.json  q2_logictree.json  q2_nodes.json  q3_logictree.json  q3_nodes.json
tpch_data/: alice_customer.csv  alice_lineitem.csv  alice_nation.csv  alice_orders.csv  alice_part.csv  alice_partsupp.csv  alice_region.csv  bob_customer.csv  bob_lineitem.csv  bob_nation.csv  bob_orders.csv  bob_part.csv  bob_partsupp.csv  bob_region.csv  bob_supplier.csv
