set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


#Testing macro
set(PQXX_PREFIX /opt/homebrew/opt/libpqxx)
set(PQ_PREFIX /opt/homebrew/opt/libpq)
find_package(nlohmann_json 3.2.0 REQUIRED)
macro (add_test_executable_with_lib _name libs)
	add_executable(test_${_name} "${_name}.cpp")
	target_link_libraries(test_${_name} PRIVATE ${EMP-OT_LIBRARIES})
	target_include_directories(test_${_name} PRIVATE /opt/homebrew/opt/libpqxx/include)
    target_link_directories(test_${_name} PRIVATE /opt/homebrew/opt/libpqxx/lib /opt/homebrew/opt/libpq/lib)
    target_link_libraries(test_${_name} PRIVATE ${EMP-OT_LIBRARIES} pqxx pq)
	target_link_libraries(test_${_name} PRIVATE nlohmann_json::nlohmann_json)
endmacro()

macro (add_test_case _name)
	add_test_executable_with_lib(${_name} "")
  	add_test(NAME ${_name} COMMAND "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
endmacro()

macro (add_test_case_with_run _name)
	add_test_executable_with_lib(${_name} "")
	add_test(NAME ${_name} COMMAND "./run" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
endmacro()


# Test cases
#add_test_case_with_run(bit)
#add_test_case_with_run(int)
IF(${ENABLE_FLOAT})
ENDIF(${ENABLE_FLOAT})
#add_test_case_with_run(circuit_file)
#add_test_case_with_run(example)
#add_test_case_with_run(oblisort)
#add_test_case_with_run(oblisort_perf)
#add_test_case_with_run(compaction)
#add_test_case_with_run(relsort)
#add_test_case_with_run(filter)
#add_test_case_with_run(pac_filter)
#add_test_case_with_run(equijoin)
#add_test_case_with_run(index_equijoin)
#add_test_case_with_run(qplan)
#add_test_case_with_run(parser)
#add_test_case_with_run(planner)
#add_test_case_with_run(full_pipeline)
add_test_case_with_run(exp_q1)
add_test_case_with_run(exp_q12)
add_test_case_with_run(exp_q2)
add_test_case_with_run(exp_q21)
#add_test_case_with_run(exp_q3)
#add_test_case_with_run(exp_q4)
#add_test_case_with_run(exp_q5)